--- a/styles/style.css
+++ b/styles/style.css
@@ -20,6 +20,9 @@
     border-radius: 8px;
     border: none;
 }
+.text-primary{
+    color: rgba(255, 144, 14, 1);
+}
 /* dark-02 */
 .text-gray{
     color: rgba(66, 66, 66, 1);
@@ -30,6 +33,17 @@
 }
 .bg-light{
     background-color: rgba(255, 144, 14, 0.1);
+}
+.section-title{
+    font-size: 2.8rem;
+    font-weight: 700;
+}
+main > section{
+    margin-top: 130px;
+}
+main{
+    max-width: 1440px;
+    margin: 0 auto;
 }
 /* Header-styles */
 
@@ -71,9 +85,43 @@
     width: 100%;
 }
 
+/*Team and feature related styles:  */
+
+.teams{
+    align-items: center;
+}
+.team-img-container{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 24px;
+}
+
+.our-features{
+    margin-left: 130px;
+    max-width: 530px;
+}
+#quick-list{
+    font-weight: 500;
+}
+
 /* responsive media query */
 @media screen and (max-width:576px) {
-    .navbar,.nav-link{
+    .navbar,.nav-link,.teams{
         flex-direction: column;
+    }
+    .team-img-container{
+        grid-template-columns: repeat(1,1fr);
+    }
+    .our-features{
+        margin-left: 20px;
+    }
+}
+/* responsive media query fo medium screen */
+@media screen and (min-width:576px) and (max-width:992px) {
+    .teams{
+        flex-direction: column;
+    }
+    .our-features{
+        margin: 50px auto;
     }
 }
