--- a/styles/style.css
+++ b/styles/style.css
@@ -103,6 +103,26 @@ main{
 #quick-list{
     font-weight: 500;
 }
+/* features related style */
+#feature-section-title{
+    border-left: 5px solid rgba(255, 144, 14, 1);
+    padding-left: 20px;
+}
+.features{
+    gap: 140px;
+}
+.feature-card{
+    padding: 30px;
+    border-radius: 8px;
+    box-shadow: 0 4px 30px 0px rgba(0, 0, 0,0.06);
+    margin-bottom: 20px;
+}
+.feature-card .feature-title{
+    font-weight: 600;
+    font-size: 1.25rem;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
 /* some facts related style */
 .fact-card{
     border: 1px solid rgba(255, 144, 14, 1);
