--- a/styles/style.css
+++ b/styles/style.css
@@ -103,6 +103,7 @@ main{
 #quick-list{
     font-weight: 500;
 }
+
 /* features related style */
 #feature-section-title{
     border-left: 5px solid rgba(255, 144, 14, 1);
@@ -122,6 +123,20 @@ main{
     font-size: 1.25rem;
     margin-top: 0px;
     margin-bottom: 0px;
+}
+#experience-badge{
+    padding: 45px 42px;
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin-left: -100px;
+    margin-top:-100px ;
+}
+#experience-year{
+    font-size: 4rem;
+    font-weight: 700;
+}
+.feature-architect img{
+    width: 100%;
 }
 /* some facts related style */
 .fact-card{
@@ -168,7 +183,7 @@ main{
 
 /* responsive media query */
 @media screen and (max-width:576px) {
-    .navbar,.nav-link,.teams{
+    .navbar,.nav-link,.teams,.features{
         flex-direction: column;
     }
     .team-img-container,.facts-container,.sponsor-companies{
@@ -185,10 +200,14 @@ main{
     .our-features{
         margin-left: 20px;
     }
+    #experience-badge{
+        margin-top: 20px;
+        margin-left: 20px;
+    }
 }
 /* responsive media query fo medium screen */
 @media screen and (min-width:576px) and (max-width:992px) {
-    .teams{
+    .teams,.features{
         flex-direction: column;
     }
     .our-features{
@@ -198,5 +217,9 @@ main{
         grid-template-columns: repeat(2,1fr);
         gap: 50px;
         justify-items: center;
+    }
+    #experience-badge{
+        margin-top: 20px;
+        margin-left: 20px;
     }
 }
